--- a/Config_server/src/main/resources/application.yml
+++ b/Config_server/src/main/resources/application.yml
@@ -9,6 +9,6 @@ spring:
                     uri: https://github.com/alexredmond/SpringCloudConfig
                     #username: u
                     #password: p
-                    search-paths:
+                    searchPaths:
                        - 'ConfigurationFiles/**'
                        - 'ConfigurationFiles/application.properties'
