--- a/Config_client/src/main/resources/bootstrap.properties
+++ b/Config_client/src/main/resources/bootstrap.properties
@@ -2,3 +2,5 @@
 spring.profiles.active=qa
 spring.cloud.config.uri=http://localhost:8888
 
+spring.cloud.config.username=user
+spring.cloud.config.password=pass
