--- a/Config_client/src/main/resources/bootstrap.properties
+++ b/Config_client/src/main/resources/bootstrap.properties
@@ -4,3 +4,5 @@ spring.cloud.config.uri=http://localhost:8888
 
 spring.cloud.config.username=user
 spring.cloud.config.password=pass
+
+encrypt.key=ABCDEFGHIJKLMNOPQRSTUVWXYZ
