--- a/Config_client/src/main/resources/bootstrap.properties
+++ b/Config_client/src/main/resources/bootstrap.properties
@@ -6,3 +6,5 @@ spring.cloud.config.username=user
 spring.cloud.config.password=pass
 
 encrypt.key=ABCDEFGHIJKLMNOPQRSTUVWXYZ
+
+management.endpoints.web.exposure.include=refresh
